--- a/wiki/accessible.wikitext
+++ b/wiki/accessible.wikitext
@@ -20,6 +20,7 @@ Latin ''[[accessibilis]]'', from ''[[accedere]]'': compare French ''accessible''
 *[[Romanian]]: [[accesibil]] (1,3) [[abordabil]] (2)
 *[[Spanish]]: [[accesible]]
 *Swedish:  [[tillgänglig]]
+*[[Portuguese]]: [[acessível]]
 
 === Related Words ===
 * [[accessibly]]
