/* Translations */ +nl <research#37494>

--- a/wiki/research.wikitext
+++ b/wiki/research.wikitext
@@ -12,6 +12,7 @@ Prefix [[re-]] + [[search]]: compare for noun: Old French ''[[recerche]]'', Fren
 *[[scrutiny]]
 
 ====Translations====
+*Dutch: [[onderzoek]]
 *Finnish: [[tutkimus]]
 *French: [[recherche]]
 *German: [[Forschung]]
