--- a/wiki/research.wikitext
+++ b/wiki/research.wikitext
@@ -21,6 +21,7 @@ Prefix [[re-]] + [[search]]: compare for noun: Old French ''[[recerche]]'', Fren
 ===Transitive verb===
 #To search or examine with continued care; to seek diligently.
 ====Translations====
+*Dutch: [[onderzoeken]], [[uitvissen]], [[uitzoeken]], [[nagaan]]
 *French: [[examiner]], [[explorer]], [[fouiller]], [[rechercher]]
 *Portuguese: [[buscar]], [[explorar]], [[investigar]]
 *Swedish: [[undersöka]], [[forska]]
@@ -28,6 +29,6 @@ Prefix [[re-]] + [[search]]: compare for noun: Old French ''[[recerche]]'', Fren
 
 -----
 '''Which part of speech are these?'''
-*Dutch: [[speurtocht]], [[speurwerk]], [[exploreren]], [[nagaan]], [[onderzoeken]], [[uitvissen]], [[uitzoeken]], [[onderzoek]], [[speurwerk]]
+*Dutch: [[speurtocht]], [[speurwerk]], [[exploreren]], [[onderzoek]]
 
 {{cleanup}}
