cleaned up <research#37494>

--- a/wiki/research.wikitext
+++ b/wiki/research.wikitext
@@ -12,7 +12,7 @@ Prefix [[re-]] + [[search]]: compare for noun: Old French ''[[recerche]]'', Fren
 *[[scrutiny]]
 
 ====Translations====
-*Dutch: [[onderzoek]]
+*Dutch: [[onderzoek]], [[speurwerk]]
 *Finnish: [[tutkimus]]
 *French: [[recherche]]
 *German: [[Forschung]]
@@ -25,10 +25,3 @@ Prefix [[re-]] + [[search]]: compare for noun: Old French ''[[recerche]]'', Fren
 *French: [[examiner]], [[explorer]], [[fouiller]], [[rechercher]]
 *Portuguese: [[buscar]], [[explorar]], [[investigar]]
 *Swedish: [[undersöka]], [[forska]]
-
-
------
-'''Which part of speech are these?'''
-*Dutch: [[speurtocht]], [[speurwerk]], [[exploreren]], [[onderzoek]]
-
-{{cleanup}}
