--- a/wiki/cowboy.wikitext
+++ b/wiki/cowboy.wikitext
@@ -7,7 +7,7 @@
 #a person from the US West or Southwest
 #a person who dresses like a US cowboy, especially one who wears a [[cowboy hat]]
 #a fan of Country-Western music
-#a person who goes for something without regard for other people's feelings or opinions
+# (''UK, colloquial'') a dishonest and incompetent independent tradesman. A [[cowboy plumber]] may collect a large fee in advance, and leave floods and the need for expensive corrective work behind. 
 ==== Translations ====
 *Finnish: [[karjapaimen]]
 *Slovak: [[kraviar]] ''m'' (1), cowboy ''m'' (2...)
