--- a/wiki/trilogy.wikitext
+++ b/wiki/trilogy.wikitext
@@ -11,7 +11,8 @@ L & NL [[trilogia]] fr. Gk. [[tri]] + ''[[-logia]]'' ([[-logy]])
 
 ('''Plural''': [[trilogies]])
 
-#A collection of three volumes in one
+#A collection of three books in one
+
 ===Synomyms===
 ===Antonyms===
 ====Translations====
