--- a/wiki/battleship.wikitext
+++ b/wiki/battleship.wikitext
@@ -1,1 +1,3 @@
-Large warship displacing tens of thousands of tons, heavily armoured and armed with big guns. Battleships are now obsolescent, replaced by smaller vessels with guided missiles.
+Large warship displacing tens of thousands of tons, heavily armoured and armed with big guns. Battleships are now obsolescent, replaced by smaller vessels with guided missiles. 
+
+Term derived from [[ship of the line of battle]], which gave rise to [[battleship]] and the obsolete expression [[ship of the line]]
