--- a/wiki/whisky.wikitext
+++ b/wiki/whisky.wikitext
@@ -1,7 +1,7 @@
 == English ==
 === Noun ===
 '''whisky'''
-# a distilled alcoholic liquor
+# an alcoholic liquor distilled from fermented grain and usually aged by storing in barrels.
 # a drink of whisky
 ==== Alternate Spelling ====
 * [[whiskey]]: in Ireland and USA
@@ -22,6 +22,7 @@
 *Ukrainian: [[горілка]] ''f'' (horilka)
 
 ----
+
 == Dutch ==
 === Noun ===
 '''whisky''' ''m''
