--- a/wiki/flamberge.wikitext
+++ b/wiki/flamberge.wikitext
@@ -1,6 +1,8 @@
-==English==
-===Noun===
+{{-en-}}
+{{-noun-}}
 '''flamberge''' (''plural'' [[flambergen]]?)
 #(''Weapon'') [[Category:Weapon]] A [[European]] [[sword]], typically a [[rapier]], which had a [[wavy]] [[blade]], possibly to [[increase]] the [[cut]]ting [[surface]] or for [[aid]] in [[parry]]ing.
 #:'''Quotations'''
 #:*'''1884''': The wavy, cutting surface in the '[[flamberge]]', to which [[flame]] gave a name: it is [[nowhere]] better [[develop]]ed than in the [[beautiful]] [[Malay]] [[krís]] ([[crease]]). The [[object]] [[seem]]s to be that of increasing the cutting surface. &mdash; Richard F. Burton, ''The Book of the Sword'', page 137.
+{{-trans-}}
+*Japanese: [[フランベルジェ]]
