--- a/wiki/barreter.wikitext
+++ b/wiki/barreter.wikitext
@@ -2,5 +2,5 @@
 
 ===Noun===
 '''barreter'''
-
+# Electrical resistor whose resistance increases with temperature; usually used to protect attached circuitry.
 #  A contentious person, quarreler, or fighter.
