--- a/wiki/misunderestimate.wikitext
+++ b/wiki/misunderestimate.wikitext
@@ -6,8 +6,6 @@ Coined by U.S. president George W. Bush (date?) as an inadvertent blend of [[mis
 
 ===Verb===
 # To underestimate by failing to understand.
-
-===Quotations===
-'''2003''' ''Hence, while anticipating incoming fire, here are several factors for why even the most liberal of Democrats should not "misunderestimate" -- my favorite Bushism -- our prez:'' Joel Connelly, ''Seattle Post-Intelligencer'' Wednesday, April 30, 2003
-
-'''2004''' ''I think that anybody who misunderestimates this president is going to have egg on their face in a few years," Rice told me.'' Bill Sammon, ''Misunderestimated: The President Battles Terrorism, John Kerry, and the Bush Haters.'' (ISBN 0060723831), page 347
+#:'''Quotations'''
+#:*'''2003''' ''Hence, while anticipating incoming fire, here are several factors for why even the most liberal of Democrats should not "misunderestimate" -- my favorite Bushism -- our prez:'' Joel Connelly, ''Seattle Post-Intelligencer'' Wednesday, April 30, 2003
+#:*'''2004''' ''I think that anybody who misunderestimates this president is going to have egg on their face in a few years," Rice told me.'' Bill Sammon, ''Misunderestimated: The President Battles Terrorism, John Kerry, and the Bush Haters.'' (ISBN 0060723831), page 347
