--- a/wiki/thaw.wikitext
+++ b/wiki/thaw.wikitext
@@ -17,3 +17,5 @@ To cause (frozen things, as earth, snow, ice) to melt, soften, or dissolve.
 == Noun==
 
 The melting of ice, snow, or other congealed matter; the resolution of ice, or the like, into the state of a fluid; liquefaction by heat of anything congealed by frost; also, a warmth of weather sufficient to melt that which is congealed.--[[w:Dryden]].
+
+[[es:deshielo]]
