--- a/wiki/traverse.wikitext
+++ b/wiki/traverse.wikitext
@@ -7,6 +7,8 @@ From Latin '''[[trans]]''' ''across'' + '''[[versus]]''' ''turned'', perfect pas
 
 # Go across, travel across, often under difficult conditions
 #:''He will have to traverse the mountain before he gets to other side.''
+====Translations====
+*Urdu: [[پار کرنا]]
 
 ===Noun===
 '''traverse'''
