/* Translation */ <natural numbers#39596>

--- a/wiki/natural_numbers.wikitext
+++ b/wiki/natural_numbers.wikitext
@@ -10,6 +10,7 @@
 *Chinese: [[自然数]] (ziranshu)
 *Italian: [[numero naturale]] ''m''
 *Japanese: [[自然数]] (しぜんすう, shizensu)
+*Portuguese: [[números naturais]]
 
 === Related terms ===
 * [[set]]
