--- a/wiki/re-search.wikitext
+++ b/wiki/re-search.wikitext
@@ -1,8 +1,10 @@
-{{rfd}}
+==English==
 
 ===Etymology===
 Prefix [[re-]] + [[search]]
+
 ===Transitive verb===
 #To search again; to examine anew. 
+
 ===See also===
 *[[research]]
