/* Noun */ fixed grammar <cryptology#34275>

--- a/wiki/cryptology.wikitext
+++ b/wiki/cryptology.wikitext
@@ -4,7 +4,7 @@ From the Greek words kryptós ([[hidden]]) and logos ([[word]])
 ===Pronunciation===
 
 ===Noun===
-# The practice of analysing of [[encode|encoded]] messages, in order to [[decode]] them.
+# The practice of analysing [[encode|encoded]] messages, in order to [[decode]] them.
 
 ===Translations===
 *[[Bulgarian]]: [[криптология]] ''f''
