/* Translations */ <shit oneself#55518>

--- a/wiki/shit_oneself.wikitext
+++ b/wiki/shit_oneself.wikitext
@@ -43,5 +43,6 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Urdu: [[پاد گرم هونا]] (pad garam hona)
 |}
 |}
