/* Urdu */ <پاد گرم ہونا#65214>

--- a/wiki/%D9%BE%D8%A7%D8%AF_%DA%AF%D8%B1%D9%85_%DB%81%D9%88%D9%86%D8%A7.wikitext
+++ b/wiki/%D9%BE%D8%A7%D8%AF_%DA%AF%D8%B1%D9%85_%DB%81%D9%88%D9%86%D8%A7.wikitext
@@ -2,4 +2,4 @@
 ===Verb===
 '''پاد گرم هونا'''
 # (literally)  For one's fart to become hot.
-# (figuratively) To be very scared.
+# (figuratively, especially in Hyderabadi dialect) To be very scared.
