--- a/wiki/procrastinative.wikitext
+++ b/wiki/procrastinative.wikitext
@@ -1,8 +1,8 @@
 ==English==
 ===Etymology===
+From [[procrastinate]]
 <!--can we have a proper etym here: Related to ''[[procrastination]]''-->
 
 ===Adjective===
 '''procrastinative''' (''no [[comparative]] or [[superlative]]'')
-
-<!--what does this mean, if anything?-->
+*Tending to or supporting [[procrastination]]
