--- a/wiki/nan.wikitext
+++ b/wiki/nan.wikitext
@@ -1,7 +1,10 @@
 ==English==
 
+==English==
 ===Noun===
 
 '''nan'''
 
 #A flat, leavened bread of northwest India, made of white flour and baked in a tandoor.
+====Translations====
+*Urdu: [[نان]]
