--- a/wiki/understand.wikitext
+++ b/wiki/understand.wikitext
@@ -43,6 +43,7 @@
 *Norwegian: [[forst&aring;]] (1)
 *Spanish: [[entender]] (1), [[comprender]]
 *Swedish: [[förstå]] (1,2)
+*Urdu: [[سمجهنا]]
 
 ===Interjection===
 '''understand!'''
