--- a/wiki/goodbye.wikitext
+++ b/wiki/goodbye.wikitext
@@ -49,4 +49,5 @@ From Middle English for "God be with ye(=you)".
 *Spanish: [[adiós]], [[vaya con dios]]
 *Swedish: [[adjö]], [[fåravel]]
 *Turkish: [[Allah'a ısmarladık]]
+*Urdu: [[خدا حافظ]] (Khuda hafiz)
 *Volapük: [[ledit]]
