--- a/wiki/goodbye.wikitext
+++ b/wiki/goodbye.wikitext
@@ -17,6 +17,7 @@ From Middle English for "God be with ye(=you)".
 [[bye]], [[farewell]], [[adieu]], [[later]], [[see you]], [[good day]], [[good night]], [[cheerio]], [[TTFN]], [[adios]], [[hasta la vista]] (baby)!
 
 === Translations ===
+*Arabic: [[مع سلامة]] (Ma Salama)
 *Basque: [[agur]]
 *Bulgarian: [[добър]], [[хубав]], [[значителен]], [[добро]], [[благо]]
 *Catalan: [[adeu]]
