--- a/wiki/donkey.wikitext
+++ b/wiki/donkey.wikitext
@@ -67,6 +67,7 @@
 *Turkish: [[eşek]], [[eşekmerkep]]
 *Ukrainian: [[осел]] ([[osel]])
 *Upper Sorbian: [[wosoł]]
+*Urdu: [[گدها]] (gadha)
 *Welsh: [[asyn]]
 
 ===External Links===
