--- a/wiki/horse.wikitext
+++ b/wiki/horse.wikitext
@@ -99,6 +99,7 @@ From Middle English, from Old English [[hors]].
 *[[Tzotzil]]: [[k'a]]
 *Ukrainian: [[кінь]] ([[kin']])
 *[[Upper Sorbian]]: [[kóń]]
+*Urdu: [[گهوڑا]]
 *Welsh: [[ceffyl]]
 |}
 |}
