--- a/wiki/origami.wikitext
+++ b/wiki/origami.wikitext
@@ -5,7 +5,7 @@ Japanese
 ===Noun===
 '''origami''' (''[[uncountable]]'')
 
-# The Japanese art of paper folding
+# The Japanese art of paper folding.
 
 ====Translations====
 *Japanese: [[折り紙]], [[折紙]] ([[おりがみ]], origami)
