/* Related Terms */ <soil science#63507>

--- a/wiki/soil_science.wikitext
+++ b/wiki/soil_science.wikitext
@@ -14,3 +14,5 @@
 # [[soil microbiology]]
 # [[soil mineralogy]]
 # [[soil physics]]
+==External links==
+Wikipedia has an article about [[w:en:Soil_science|Soil science]]
