--- a/wiki/whole_chebang.wikitext
+++ b/wiki/whole_chebang.wikitext
@@ -1,16 +1,16 @@
-[[de:Shebang]] [[fr:Sha-bang]]
+In [[computing]], a [[shebang]] is command that makes a [[Unix-like]] [[operating system]] execute the commands in a [[text file]] using an [[interpreter (computer software)|interpreter]]. A shebang consists of a [[number sign]] and [[exclamation point]] character "#!" in the first two columns of the first line, followed by the [[Path (computing)|path]] to the [[computer program|program]] that will provide the interpretation. 
 
-In [[computing]], a '''shebang''' is command that makes a [[Unix-like]] [[operating system]] execute the commands in a [[text file]] using an [[interpreter (computer software)|interpreter]]. A shebang consists of a sharp symbol and exclamation point character '''#!''' in the first two columns of the first line, followed by the [[Path (computing)|path]] to the [[computer program|program]] that will provide the interpretation. 
+The name shebang comes from the [[contraction (Linguistics)|contraction]] of ''sharp bang'', or ''hash bang'', referring to the two characters. Unix jargon uses ''hash'' to refer to the number sign character and ''bang'' to refer to the exclamation point.
 
-The name shebang comes from the contraction of ''sharp bang'', or ''hash bang'', referring to the two characters.  Unix jargon uses ''bang'' to refer to the [[exclamation point]] character and "hash" to refer to the [[octothorpe]].
+A typical shebang line could be: <code>#!/bin/sh</code>
 
-A typical shebang line could be
- #!/bin/sh
+This instructs the operating system to interpret the file with the program <code>sh</code> (typically either [[Bourne shell]] or [[UNIX shell]]) in the directory <code>/bin</code>.
 
-This instructs the operating system to interpret the file with the program /bin/sh.
-
-It is common for different variants of even the same operating system to have different locations for the interpreter.  Thus, it is not uncommon to need to edit the shebang line after copying a [[script (computer programming)|script]] from one computer to another.
+It is common for different variants of even the same operating system to have different locations for the interpreter. Thus, it is not uncommon to need to edit the shebang line after copying a [[script (computer programming)|script]] from one computer to another.
 
 ==External links==
-*[http://homepages.cwi.nl/~aeb/std/shebang/ Some details about the shebang mechanism on various Unix flavours]
+*[http://homepages.cwi.nl/~aeb/std/shebang/ Details about the shebang mechanism on various Unix flavours]
 *[[FOLDOC:shebang|FOLDOC shebang article]]
+
+[[de:Shebang]]
+[[fr:Sha-bang]]
