/* Noun */  example <affect#36251>

--- a/wiki/affect.wikitext
+++ b/wiki/affect.wikitext
@@ -5,6 +5,7 @@ From French ''[[affecter]]''
 
 #a strong emotional experience
 #emotion
+:''He seemed completely devoid of affect.''
 
 ====Translation====
 
