--- a/wiki/affect.wikitext
+++ b/wiki/affect.wikitext
@@ -15,6 +15,8 @@ From French ''[[affecter]]''
 ===Verb===
 
 #to influence or alter
+:''The experience affected me deeply.''
+:''The heat of the sunlight affected the speed of the chemical reaction.''
 
 ''Don't confuse with [[effect]]''
 
