--- a/wiki/%E8%A8%B3.wikitext
+++ b/wiki/%E8%A8%B3.wikitext
@@ -43,8 +43,10 @@
 ** '''[[On]]''': [[やく]] (yaku), [[えき]] (eki)
 ** '''[[Kun]]''': [[わけ]] (wake), [[とく]] (toku)
 
-* '''Compounds''':
-** [[翻訳]] (ほんやく, hon-yaku)
+===Compounds===
+*[[訳語]]
+*[[訳者]]
+* [[翻訳]] (ほんやく, hon-yaku)
 
 * '''Other info''':  
 
