--- a/wiki/%E8%AF%91.wikitext
+++ b/wiki/%E8%AF%91.wikitext
@@ -34,6 +34,18 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[譯]]
 
+===Compounds===
+*[[译本]]
+*[[译笔]]
+*[[译稿]]
+*[[译名]]
+*[[译述]]
+*[[译文]]
+*[[译音]]
+*[[译员]]
+*[[译者]]
+*[[译作]]
+
 * '''Other info''': 
 
 ----
