--- a/wiki/Jew.wikitext
+++ b/wiki/Jew.wikitext
@@ -5,7 +5,7 @@
 #a person of the [[Jewish]] religious belief system;
 # a person born of a Jewish mother who has not professed a different religious belief system;
 # a person of Jewish ethnicity (See "secular Jew").
-
+a person connected to the jewish land Israel,possibly an aethiest but a jew. Even if science proved god didnt exist, hed still be a jew. 
 ====Synonyms====
 *[[Jewess]] (''female'')
 *[[kike]] (''derogatory'')
