--- a/wiki/%E7%BF%BB.wikitext
+++ b/wiki/%E7%BF%BB.wikitext
@@ -30,8 +30,72 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': faan1
 
-* '''Compounds''':
-** [[翻譯]], [[翻译]] (fānyì)
+===Compounds===
+*[[翻案]]
+*[[翻白眼]], [[翻白眼儿]]
+*[[翻版]]
+*[[翻本]], [[翻本儿]]
+*[[翻茬]]
+*[[翻场]]
+*[[翻车鱼]]
+*[[翻哧]]
+*[[翻船]]
+*[[翻地]]
+*[[翻动]]
+*[[翻斗]]
+*[[翻斗车]]
+*[[翻番]]
+*[[翻飞]]
+*[[翻覆]]
+*[[翻改]]
+*[[翻盖]]
+*[[翻个儿]]
+*[[翻跟头]]
+*[[翻工]]
+*[[翻供]]
+*[[翻滚]]
+*[[翻过儿]]
+*[[翻黄]], [[翻簧]]
+*[[翻悔]]
+*[[翻检]]
+*[[翻建]]
+*[[翻江倒海]]
+*[[翻浆]]
+*[[翻搅]]
+*[[翻筋斗]]
+*[[翻旧账]]
+*[[翻卷]]
+*[[翻刻]]
+*[[翻来覆去]]
+*[[翻老账]]
+*[[翻脸]]
+*[[翻领]], [[翻领儿]]
+*[[翻录]]
+*[[翻毛]]
+*[[翻弄]]
+*[[翻拍]]
+*[[翻皮]]
+*[[翻然]]
+*[[翻砂]]
+*[[翻晒]]
+*[[翻山越岭]]
+*[[翻身]]
+*[[翻腾]]
+*[[翻天]]
+*[[翻天覆地]]
+*[[翻蔓儿]]
+*[[翻胃]]
+*[[翻箱倒柜]]
+*[[翻新]]
+*[[翻修]]
+* [[翻譯]], [[翻译]] (fānyì)
+*[[翻印]]
+*[[翻涌]]
+*[[翻阅]]
+*[[翻越]]
+*[[翻云覆雨]]
+*[[翻造]]
+*[[翻嘴]]
 
 * '''Other info''': 
 
@@ -43,8 +107,8 @@
 ** '''[[On]]''': [[ほん]] (hon), [[はん]] (han)
 ** '''[[Kun]]''': [[ひるがえる]] (hirugaeru), [[とる]] (toru), [[ひるがえす]] (hirugaesu)
 
-* '''Compounds''':
-** [[翻訳]] (ほんやく, hon-yaku)
+===Compounds===
+* [[翻訳]] (ほんやく, hon-yaku)
 
 * '''Other info''':  
 
