--- a/wiki/doughnut.wikitext
+++ b/wiki/doughnut.wikitext
@@ -13,7 +13,7 @@ dough&middot;nut
 #A peel-out or [[skid-mark]] in the shape of doughnut or toroid; a 360-degree skid.
 #(''derogatory slang'') A fat person.
 #:''Hey doughnut! Get over here.''
-#A spare automoblie tire that is smaller than a full sized tire and is only intended for temporary use. 
+#A spare automoblie tire, usually stored in the trunk, that is smaller than a full sized tire and is only intended for temporary use. 
 ====Synonyms====
 *(''anything in the shape of a torus''): [[ring]], [[torus]]
 *(''fat person''): [[Swiss roll]]
