<seeing-eye dog#65238>

--- a/wiki/seeing-eye_dog.wikitext
+++ b/wiki/seeing-eye_dog.wikitext
@@ -1,1 +1,2 @@
 The term "seeing eye" was taken from the Bible (Proverbs 20:12) and trademarked by the Seeing Eye, Inc. of Morristown, New Jersey.
+#A dog used as an aide to help guide blind people
