--- a/wiki/anorexia_nervosa.wikitext
+++ b/wiki/anorexia_nervosa.wikitext
@@ -1,4 +1,4 @@
-#an eating disorder characterized by self starvation due to a fear a gaining weight. 
+#an eating disorder characterized by self starvation due to a fear of gaining weight. 
 
 see also
 [[bulimia]],
