--- a/wiki/bucket.wikitext
+++ b/wiki/bucket.wikitext
@@ -8,6 +8,7 @@
 #A container made out of plastic, metal or wood, outfitted with a handle and used for carrying things in it, often liquids.
 #The amount held in a bucket. (''a bucket of water'')
 #Part of a piece of machinery that resembles a bucket.
+#(slang) An old car.
 
 ====Synonyms====
 *(1): [[pail]]
