--- a/wiki/temps.wikitext
+++ b/wiki/temps.wikitext
@@ -1,3 +1,12 @@
 [[time]]
 
 #(plural noun)see [[temp]]
+----
+==French==
+===Noun===
+'''temps''' ''m''
+
+# [[time]]
+# [[weather]]
+[[fr:temps]]
+[[ja:temps]]
