--- a/wiki/dismay.wikitext
+++ b/wiki/dismay.wikitext
@@ -1,5 +1,10 @@
 ==English==
 
+===Noun===
+
+====translation====
+*[[Russian]]: [[:ru:страх|страх]] /strah/, [[:ru:уныние|уныние]] /un1ni'e//  
+
 ===Verb===
 
 '''to dismay'''
@@ -9,3 +14,6 @@
 #To take dismay or fright; to be filled with dismay.
 #Loss of courage and firmness through fear; overwhelming and disabling terror; a sinking of the spirits; consternation.
 #Condition fitted to dismay; ruin.
+
+==[[multilingual associations]]==
+*[[Russian]]: [[:ru:от|от]] /ot/ ([[from]]) '''dismay''' [[:ru:уйти|уйти]] /ujti/ (to [[go]] [[away]]) сумей  /sumej/ ([[manage]])
