--- a/wiki/dismay.wikitext
+++ b/wiki/dismay.wikitext
@@ -1,9 +1,11 @@
 ==English==
-
 ===Noun===
 
-====translation====
-*[[Russian]]: [[:ru:страх|страх]] /strah/, [[:ru:уныние|уныние]] /un1ni'e//  
+#{{stub}}
+
+====Translations====
+*Japanese: [[狼狽]] (ろうばい)
+*[[Russian]]: [[страх]] (strax), [[уныние]] (unynije) 
 
 ===Verb===
 
@@ -14,6 +16,3 @@
 #To take dismay or fright; to be filled with dismay.
 #Loss of courage and firmness through fear; overwhelming and disabling terror; a sinking of the spirits; consternation.
 #Condition fitted to dismay; ruin.
-
-==[[multilingual associations]]==
-*[[Russian]]: [[:ru:от|от]] /ot/ ([[from]]) '''dismay''' [[:ru:уйти|уйти]] /ujti/ (to [[go]] [[away]]) сумей  /sumej/ ([[manage]])
