--- a/wiki/%D9%BE%D8%A7%D9%86%DB%8C.wikitext
+++ b/wiki/%D9%BE%D8%A7%D9%86%DB%8C.wikitext
@@ -1,3 +1,4 @@
-<TABLE dir="RTL"><tr><td><font face="tahoma">
-'''پانی''' - (ہندی؛ اسم؛ مذکر) (1) آکسيجن اور ہائيڈروجن گيس کا بے رنگ ، بے مزا اور بے مہک اور سيال مرکب جو گرم کرنے پر بھاپ اور ٹھنڈا کرنے پر برف بن جاتا ہے (2) آب، ماء، جل (3) بارش (4) پسينہ (5) دھات، منی، نطفہ (6) شراب (7) شرم، حيا (8) آنسو، اشک (9) رطوبت، ميل (10) رقيق, پتلا (11) ٹھنڈا (12) پھيکا (13) نرم، ملائم، ڈھيلا (14) کم زور، نڈھال (15) جراءت، ہمت، قصد، استقلال
-</font></td></tr></table>
+==Urdu==
+===Noun===
+'''پانی'''
+#[[water]]
