--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -103,7 +103,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *[[Tupinambá]]: [['y]]
 *Turkish: [[su]]
 *[[Tzotzil]]: [[voʻ]]
-*[[Urdu]]: [[آب]] (aab)
+*[[Urdu]]:[[پانی]] (paani), [[آب]] (aab)
 *Vietnamese: [[nước]]
 *[[Volapük]]: [[vat]]
 *Welsh: [[dŵr]]
