--- a/wiki/chicken.wikitext
+++ b/wiki/chicken.wikitext
@@ -89,6 +89,7 @@
 *Turkish: [[piliç]], [[tavuk]]
 *Ukrainian: [[курча]], [[курка]] ([[kurča]], [[kurka]])
 *[[Upper Sorbian]]: [[ćipka]], [[kokoš]], [[kurjo]], [[kurjatko]]
+*Urdu: [[مرغى]]
 *Welsh: [[cyw]], [[iâr]], [[cyw iâr]]
 
 ===See also===
