--- a/wiki/penchant.wikitext
+++ b/wiki/penchant.wikitext
@@ -1,5 +1,26 @@
+==English==
 ===Etymology===
 French
 
 ===Noun===
 '''penchant'''
+
+#{{substub}}
+
+====Synonyms====
+*[[desire]]
+
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[mieltymys]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
