--- a/wiki/ethnology.wikitext
+++ b/wiki/ethnology.wikitext
@@ -1,1 +1,5 @@
-* The branch of [[anthropology]] that studies and compares the different human cultures.
+==English==
+===Noun===
+'''ethnology''' (''[[uncountable]]'')
+
+#The branch of [[anthropology]] that studies and compares the different human cultures.
