fmt, extra sense <ethnical#65258>

--- a/wiki/ethnical.wikitext
+++ b/wiki/ethnical.wikitext
@@ -1,1 +1,6 @@
-* Related to the [[ethnology]].
+==English==
+===Adjective===
+'''ethnical''' (''no [[comparative]] or [[superlative]]'')
+
+#(''rare'') [[Ethnic]].
+#Of or relating to [[ethnology]].
