corrected - does not stand for "save our souls"; def & etym <SOS#65255>

--- a/wiki/SOS.wikitext
+++ b/wiki/SOS.wikitext
@@ -1,1 +1,8 @@
-save our souls
+==English==
+===Etymology===
+From the letters represented by the signal, chosen as a sequence that is easy to recall and transmit; it is not, as is commonly believed, an abbreviation for "save our souls", "save our ship" or any other phrase.
+
+===Noun===
+'''SOS''' (''plural'' '''SOS's''')
+
+#The conventional [[Morse code]] call made by a ship in [[distress]].
