modified def; +syns <hooptie#65253>

--- a/wiki/hooptie.wikitext
+++ b/wiki/hooptie.wikitext
@@ -1,4 +1,8 @@
-#A jalopy. An old,inexpensive car that is falling apart.
+==English==
+===Noun===
+'''hooptie''' (''plural'' '''hoopties''')
 
-====Related terms====
-*[[bucket]]
+#(''slang'') An old, worn-out car.
+
+====Synonyms====
+*[[banger]], [[bucket]], [[jalopy]], [[wreck]]
