fmt; trademark; syn; Wikipedia link <Oreo#65251>

--- a/wiki/Oreo.wikitext
+++ b/wiki/Oreo.wikitext
@@ -1,7 +1,14 @@
-#A brand name of a popular snack food comprised of a two black colored cookies with white cream in the middle.
-#A black person with a bourgeois demeanor 
-i.e. acts like a white person
-(often derogatory)
+==English==
+===Proper noun===
+'''Oreo'''&reg; (''plural'' '''Oreos''')
 
-see also:
-[[Twinkie]]
+#A brand of [[cookie]] made up of two dark brown, chocolate [[wafer]]s joined by a layer of white, [[sugary]] [[filling]].<!--Note: the filling is not cream-->
+#(''US, derogatory slang''; ''from the metaphor of being black on the outside and white on the inside, like an Oreo'') A black person who has sympathies with white people or who favors white culture to black culture.
+
+====Synonyms====
+*(''black person''): [[coconut]]
+
+===See also===
+*[[w:Oreo|Wikipedia article on Oreos]]
+*[[Twinkie]]
+*[[Uncle Tom]]
