--- a/wiki/Twinkie.wikitext
+++ b/wiki/Twinkie.wikitext
@@ -1,8 +1,11 @@
-#A brand name of a popular snack food comprised of a golden yellow cake filled with white cream.
-#An Asian person with a bourgeois demeanor 
-i.e. acts like a white person
-(often derogatory)
+==English==
+===Proper noun===
+'''Twinkie'''&reg; (''plural'' '''Twinkies''')
 
+#(&reg;) A brand of cake, yellow in colour, and having a white, creamy filling.<!--the filling is not actually cream-->
+#(''US, derogatory slang, from the metaphor of being yellow on the outside and white on the inside'') An Asian person who dresses, acts and speaks according to [[Caucasian]] stereotypes rather than Asian ones.
 
-see also:
-[[oreo]]
+===See also===
+*[[Oreo]]
+*[[twink]]
+*[[w:Twinkie|Wikipedia article on Twinkies]]
