/* Proper noun */ <Oreo#65251>

--- a/wiki/Oreo.wikitext
+++ b/wiki/Oreo.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''Oreo'''&reg; (''plural'' '''Oreos''')
 
-#A brand of [[cookie]] made up of two dark brown, chocolate [[wafer]]s joined by a layer of white, [[sugary]] [[filling]].<!--Note: the filling is not cream-->
+#(&reg;) A brand of [[cookie]] made up of two dark brown, chocolate [[wafer]]s joined by a layer of white, [[sugary]] [[filling]].<!--Note: the filling is not cream-->
 #(''US, derogatory slang''; ''from the metaphor of being black on the outside and white on the inside, like an Oreo'') A black person who has sympathies with white people or who favors white culture to black culture.
 
 ====Synonyms====
