fmt; extra sense; translation tables; quite a few translations need to be checked <chicken#8161>

--- a/wiki/chicken.wikitext
+++ b/wiki/chicken.wikitext
@@ -1,88 +1,94 @@
 ==English==
-
 ===Pronunciation===
 *[[w:IPA|IPA]]: /'ʧɪkən/
 
 ===Noun===
-'''chicken'''
+'''chicken''' (''[[countable]] and [[uncountable]], plural'' '''chickens''')
 
-# a domestic [[bird]] of the genus Gallus
-# a [[coward]]
-# the meat from the bird (1)
+#(''countable'') A domestic [[fowl]], ''Gallus gallus''.
+#(''uncountable'') The meat from this bird eaten as food.
+#(''countable, slang'') A [[coward]].
+#(''countable, gay slang'') A young, attractive, slim man, usually having little body hair.
 
 ====Synonyms====
+*(''bird''): [[cock]] (''male only''), [[chook]], [[hen]] (''female only''), [[rooster]] (''male only'')
+*(''coward''):
+*(''young, attractive, slim man''): [[twink]]
 
-*[[cock]]
-*[[chook]]
-*[[hen]]
-*[[rooster]]
-
-====Related words====
-
+====Related terms====
 *[[chick]]
+
+====Derived terms====
 *[[chicken and egg]]
+*[[chickenhawk]]
 *[[chicken egg]]
 *[[chicken out]]
 
-====Related concepts====
-
-*[[egg]]
-*[[poultry]]
-
 ====Translations====
 
+'''bird'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *Albanian: [[gjeli]]
 *Arabic: [[دّجاج]]
 *[[Basque]]: [[oilasko]], [[oilo]]
 *Belarusian: [[птушаня/птушане]], [[курыца]], [[кураня/куране]]
-*[[Bosnian]]: [[kokoš]] ''f'', [[pile]] (1), [[kukavica]] (2), [[piletina]] (3)
-*[[Breton]]: [[yar]] ''f'', [[penn]] [[yar]] ''m'' (1) kozh [[yar]] (2)
-*Bulgarian: [[пиле]] ''n'' (1), [[страхливец]] ''m'' (2), [[пъзльо]] ''m'' (2)
+*[[Bosnian]]: [[kokoš]] ''f'', [[pile#Bosnian|pile]]
+*[[Breton]]: [[yar]] ''f'', [[penn]] [[yar]] ''m''
+*Bulgarian: [[пиле]] ''n''
 *[[Catalan]]: [[pollastre]] ''m'', [[gallina]] ''f'', [[gall]] ''m''
-*Cebuano: [[manok]]
-*[[Chinese]]: simplified Chinese:[[鸡]] ( ''[[pinyin]]:jī'' ) ; traditional Chinese: [[雞]] or [[鷄]] ( ''pinyin:jī'' ) 
-*Croatian: [[pile]], [[kokoš]]
-*Czech: [[slepice]]''f'',  [[kur]] ''m'', [[kuře]] ''n'' (youngster) (1),[[zbabělec]] ''m'', [[posera]] ''m'' (2)
+*[[Cebuano]]: [[manok]]
+*Chinese, Simplified: [[鸡]] (''[[pinyin]]'': jī)
+*Chinese, Traditional: [[雞]], [[鷄]] (''pinyin'': jī) 
+*Croatian: [[pile#Croatian|pile]], [[kokoš]]
+*Czech: [[slepice]] ''f'',  [[kur]] ''m'', [[kuře]] ''n'' (''young'')
 *Danish: [[høne]]
-*Dutch: [[kip]] ''f'' (1,3), [[hen]] ''f'' (1), [[lafaard]] ''m'' (2), [[wezel]] ''m'' (2), [[kippenvlees]] ''n'' (3)
+*Dutch: [[kip#Dutch|kip]] ''f'', [[hen#Dutch|hen]] ''f''
 *[[Esperanto]]: [[koko]]
-*Estonian: [[kana]] (1,3), [[arg]] (2)
+*Estonian: [[kana]]
 *[[Faroese]]: [[høsn]]
-*Finnish: [[kananpoika]] (young), [[kana]] (hen) (1, 3); [[pelkuri]] (2)
-*French: [[poulet]] ''m'' (1,3), [[poule]] mouillée ''f'' (2)
-*[[Frisian]]: [[hin]]
+*Finnish: [[kananpoika]] (''young''), [[kana]] (''female'')
+*French: [[poulet]] ''m''
+*[[Frisian]]: [[hin#Frisian|hin]]
 *[[Friulian]]: [[poleç]], [[gjaline]]
 *[[Gallegan]]: [[galo]], [[galiña]]
-*German: [[Huhn]] ''n'' (1), [[Hühnchen]] ''n'' (1), [[Feigling]] ''m'' (2)
+*German: [[Huhn]] ''n'', [[Hühnchen]] ''n''
 *Greek: [[κοτόπουλο]], [[κότα]] '' ''
 *Hungarian: [[csirke]]
 *Icelandic: [[hænsn]]
 *Indonesian: [[ayam]]
 *Irish: [[cearc]]
-*Italian: [[pollo]], [[gallina]] '' ''
+*Italian: [[pollo#Italian|pollo]] ''m'', [[gallo]] ''m'', (''male''), [[gallina#Italian|gallina]] ''f'' (''female'')
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
 *Japanese: [[鶏]] ([[ニワトリ]], niwatori)
 *[[Ladin]]: [[gialina]]
-*Latin: [[Gallus gallus]] '' ''
-*Latvian: [[cālis]], [[vista]]
+*Latvian: [[cālis]], [[vista#Latvian|vista]]
 *Lithuanian: [[višta]]
 *[[Lower Sorbian]]: [[kokoš]], [[kurje]], [[kurjetko]]
 *Macedonian: [[пиле]], [[кокошка]] ([[pile]], [[kokoška]])
 *Maltese: [[fellus]], [[tiġieġa]]
 *Norwegian: [[kylling]], [[høne]]
 *[[Occitan]]: [[galina]]
-*Polish: [[kurczak]] ''m'' (1), [[kura]] ''f'' (1), [[tchórz]] ''m'' (2) 
+*Polish: [[kurczak]] ''m'', [[kura]] ''f''
 *Portuguese: [[frango]], [[galinha]]
 *Romanian: [[piu]], [[găină]]
 *[[Romansh]]: [[pulschain]], [[giaglina]]
 *[[Romany]]: [[kainiori]], [[kaini]] ''f''
 *Russian: [[цыпленок]], [[курица]] ([[cyplenok]], [[kurica]]) '' ''
-*[[Sami]]: [[vuonccis (gallus domesticus)]]
+*[[Sami]]: [[vuonccis (gallus domesticus)]]<!--???-->
 *[[Sardinian]]: [[caboniscu]], [[caboni]], [[puddone]], [[puddu]]
 *[[Scottish]]: [[cearc]]
 *Serbian: [[пиле]], [[кокош]] ([[pile]], [[kokoš]])
 *Slovak: [[sliepka]] ''f'', [[kurča]], [[kura]] ''n'' (youngster)
-*Slovenian: [[piščanec]] ''m'' (1, 3), [[zajec]] ''m'' (2, it literally says rabbit), [[kokoš]] ''f'' (hen), [[petelin]] ''m'' (rooster)
-*Spanish: [[pollo]] ''m'', [[gallina]] ''f''
+*Slovenian: [[piščanec]] ''m'', [[petelin]] ''m'' (''male''), [[kokoš]] ''f'' (''female''),
+*Spanish: [[pollo#Spanish|pollo]] ''m'', [[gallina#Spanish|gallina]] ''f''
 *Swedish: [[kyckling]], [[höna]]
 *Tagalog: [[manok]]
 *Thai: [[ไก่]]
@@ -91,8 +97,63 @@
 *[[Upper Sorbian]]: [[ćipka]], [[kokoš]], [[kurjo]], [[kurjatko]]
 *Urdu: [[مرغى]]
 *Welsh: [[cyw]], [[iâr]], [[cyw iâr]]
+|}
+|}
+
+'''meat'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Dutch: [[kippenvlees]] ''n''
+*French: [[poulet]] ''m''
+*Italian: [[pollo]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''coward'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Finnish: [[pelkuri]]
+*French: [[poule mouillée]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''young, attractive, slim man'''
+''See'' [[twink]]
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering might be unreliable.
+
+*[[Bosnian]]: [[kukavica]] (2), [[piletina]] (3)
+*[[Breton]]: kozh [[yar]] (2)
+*Bulgarian: [[страхливец]] ''m'' (2), [[пъзльо]] ''m'' (2)
+*Czech: [[zbabělec]] ''m'', [[posera]] ''m'' (2)
+*Dutch: [[kip]] ''f'' (3), [[lafaard]] ''m'' (2), [[wezel]] ''m'' (2), 
+*Estonian: [[kana]] (3), [[arg]] (2)
+*Finnish: [[kananpoika]] (''young''), [[kana]] (''female'') (3); *German: [[Feigling]] ''m'' (2)
+*Polish: [[kurczak]] ''m'' (1), [[kura]] ''f'' (1), [[tchórz]] ''m'' (2) 
+*Slovenian: [[piščanec]] ''m'' (3), [[zajec]] ''m'' (2)<!--this info belongs on the Slovenian page: it literally says rabbit->
 
 ===See also===
-*[[en:Chicken|Wikipedia article on chicken]]
+*[[egg]]
+*[[poultry]]
+*[[en:Chicken|Wikipedia article on the chicken]]
 
 [[Category:English birds]]
