--- a/wiki/chicken.wikitext
+++ b/wiki/chicken.wikitext
@@ -61,7 +61,7 @@
 *Icelandic: [[hænsn]]
 *Indonesian: [[ayam]]
 *Irish: [[cearc]]
-*Italian: [[pollo#Italian|pollo]] ''m'', [[gallo]] ''m'', (''male''), [[gallina#Italian|gallina]] ''f'' (''female'')
+*Italian: [[pollo#Italian|pollo]] ''m'', [[gallo]] ''m'' (''male''), [[gallina#Italian|gallina]] ''f'' (''female'')
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -156,4 +156,4 @@ The translations below need to be checked by native speakers and inserted into t
 *[[poultry]]
 *[[en:Chicken|Wikipedia article on the chicken]]
 
-[[Category:English birds]]
+[[Category:English birds]]-->
