fmt <pro-mia#65249>

--- a/wiki/pro-mia.wikitext
+++ b/wiki/pro-mia.wikitext
@@ -1,7 +1,11 @@
-#the belief that bulimic behavior is an acceptable lifestyle choice and an individual should not be forced to seek treatment for it as an eating disorder. 
+==English==
+===Noun===
+'''pro-mia'''
 
-see also:
-[[anorexia nervosa]],
-[[bulimia]],
-[[Pro Ana]],
-[[EDNOS]]
+#A movement that promotes [[bulimia]] an acceptable lifestyle choice. 
+#(''attributively'') Of or relating to pro-mia.
+
+===See also===
+*[[anorexia nervosa]]
+*[[EDNOS]]
+*[[pro-ana]]
