fmt <pro-ana#65247>

--- a/wiki/pro-ana.wikitext
+++ b/wiki/pro-ana.wikitext
@@ -1,7 +1,12 @@
-#the belief that anorexia is not an eating disorder but a healthy lifestyle choice that defies a society that promotes obesity.
+==English==
+===Noun===
+'''pro-ana'''
 
-see also:
-[[anorexia nervosa]],
-[[bulimia]],
-[[Pro Mia]],
-[[EDNOS]]
+#A movement that promotes [[anorexia nervosa]] an acceptable lifestyle choice. 
+#(''attributively'') Of or relating to pro-ana.
+
+===See also===
+*[[bulimia]]
+*[[EDNOS]]
+*[[pro-mia]]
+*[[w:pro-ana|Wikipedia article on pro-ana]]
