/* Pronunciation */ i think this might be a nicer format for multiple chinese pronunciations <今日#49718>

--- a/wiki/%E4%BB%8A%E6%97%A5.wikitext
+++ b/wiki/%E4%BB%8A%E6%97%A5.wikitext
@@ -10,10 +10,8 @@
 '''[[今]][[日]]'''
 
 ===Pronunciation===
-#Mandarin
-##jīnrì
-#Cantonese
-##gam<sup>1</sup>yat<sup>6</sup>
+*Mandarin: [[jīnrì]]
+*Cantonese: gam<sup>1</sup>yat<sup>6</sup>
 
 ===Noun===
 #[[today]]
