/* Translations to be checked */ fix broken wikipedia link <chicken#8161>

--- a/wiki/chicken.wikitext
+++ b/wiki/chicken.wikitext
@@ -154,6 +154,6 @@ The translations below need to be checked by native speakers and inserted into t
 ===See also===
 *[[egg]]
 *[[poultry]]
-*[[en:Chicken|Wikipedia article on the chicken]]
+*[[w:Chicken|Wikipedia article on the chicken]]
 
 [[Category:English birds]]-->
