/* Translation */ wikify devanagari entries <Kashmiri#49636>

--- a/wiki/Kashmiri.wikitext
+++ b/wiki/Kashmiri.wikitext
@@ -6,9 +6,8 @@
 # The language spoken in [[Kashmir]]
 
 ==== Translation ====
-
-* Hindi: कश्मीरी
-* Kashmiri: [[کشمیرى]], कश्मीरी
+*Hindi: [[कश्मीरी]]
+*Kashmiri: [[کشمیرى]], [[कश्मीरी]]
 
 ===Adjective===
 '''Kashmiri'''
