change heirarchy; +derived <fail#35893>

--- a/wiki/fail.wikitext
+++ b/wiki/fail.wikitext
@@ -1,20 +1,23 @@
-===Transitive verb===
+==English==
+===Verb===
 '''to fail''' (fails, failed, failing)
 
+====Transitive====
 #To not [[achieve]] a particular [[goal]].  (Usage note: The direct object of this word is usually an infinitive.  ''The engine failed to start.'')
 #To be [[negligent]] in one's [[duty]]. (''The report fails to take into account all the mitigating factors.'')
 
-===Translations===
+=====Translations=====
 * Danish: [[ikke kunne]] (1); [[ikke have]] (2)
 
-===Intransitive verb===
-'''to fail''' (fails, failed, failing)
-
+====Intransitive====
 #To be [[unsuccessful]] in academic pursuits. (''I failed in English last year.'')
 #To cease to [[operate]] correctly. (''After running five minutes, the engine failed.'')
 
-===Translations===
+=====Translations=====
 * Danish: [[dumpe]] (1); [[standse]] (2)
 * Dutch: [[falen]] (1)
 * German:  [[scheitern]] (1)
 * Russian: [[провалить]] (1)
+
+====Derived terms====
+*[[failure]]
