/* Verb */ just->just; remove redundancy <jest#35285>

--- a/wiki/jest.wikitext
+++ b/wiki/jest.wikitext
@@ -23,7 +23,7 @@
 #** [[witticism]]
 
 ===Verb===
-'''to just''' ([[jests]], [[jested]], [[jesting]])
+'''to jest''' ([[jests]], [[jested]], [[jesting]])
 
 ====Intransitive====
 # to make a joke
@@ -32,7 +32,7 @@
 #** [[kid]]
 # to [[talk]] in a [[playful]] manner
 
-====Transitive verb====
+====Transitive====
 # to make fun of
 #* Synonyms
 #** [[mock]]
