--- a/wiki/polynomial.wikitext
+++ b/wiki/polynomial.wikitext
@@ -3,7 +3,13 @@
 
 #(''Mathematics'') a sum of [[terms]], each term being the product of a [[constant]] [[coefficient]] and one or more [[variable]]s raised to either a [[positive]] [[integer]] or [[zero]]
 
+===Adjective===
+'''polynomial'''
+#(''Mathematics'') that can be described or limited by a polynomial.
+:: ''Polynomial growth''
+
 ====Translations====
 
 *[[French]]: [[polynôme]] ''m''
 *[[Italian]]: [[polinomio]] ''m''
+*[[Spanish]]: ''n'' [[polinomio(s)]] ''m'',  ''adj'' [[polinomial(es)]]
