--- a/wiki/basionym.wikitext
+++ b/wiki/basionym.wikitext
@@ -1,9 +1,10 @@
-=Noun==
+==Noun==
 '''basionym''' 
 
-#On [taxonomy], the first scientific name applied to a species and on which subsequent names are based.  In terms of nomenclature basionyms are usually obsolete.
+#On [[taxonomy]], the first scientific name applied to a species and on which subsequent names are based.  In terms of nomenclature basionyms are usually obsolete.
 
 For example,
 
 ''Arundinaria distans'' Trin. (Basionym)
+
 ''Colanthelia distans'' (Trin.) McClure (Latest scientific name)
