--- a/wiki/complex.wikitext
+++ b/wiki/complex.wikitext
@@ -6,6 +6,10 @@ From Latin ''complex'', from ''[[com-]]'', '''with''', combining form of ''[[cum
 '''complex'''
 
 # made up of multiple parts; not [[simple]]
+#(''Mathematics'') That is located in the [[cardinal product]] of the [[real]] and [[imaginary]] planes.
+#:'''Complex''' Function.
+#:'' ( 1 ; -i ) * ( 1 ; i ) = 2 ''
+
 
 ====Antonyms====
 *[[simple]]
@@ -29,6 +33,7 @@ From Latin ''complex'', from ''[[com-]]'', '''with''', combining form of ''[[cum
 *[[Japanese]]: [[複雑]] ([[ふくざつ]], fukuzatsu)
 *[[Latin]]: complex
 *[[Russian]]: [[сложный]]
+*[[Spanish]]: ''m'' complejo(s), ''f'' compleja(s)
 |}
 |}
 
