--- a/wiki/basionym.wikitext
+++ b/wiki/basionym.wikitext
@@ -1,10 +1,8 @@
-==Noun==
 '''basionym''' 
 
-#On [[taxonomy]], the first scientific name applied to a species and on which subsequent names are based.  In terms of nomenclature basionyms are usually obsolete.
+#On [[taxonomy]], the first scientific name applied to a species and on which subsequent names are based.  
 
 For example,
 
-''Arundinaria distans'' Trin. (Basionym)
-
+''Arundinaria distans'' Trin. (Basionym)<br>
 ''Colanthelia distans'' (Trin.) McClure (Latest scientific name)
