--- a/wiki/complex.wikitext
+++ b/wiki/complex.wikitext
@@ -6,7 +6,7 @@ From Latin ''complex'', from ''[[com-]]'', '''with''', combining form of ''[[cum
 '''complex'''
 
 # made up of multiple parts; not [[simple]]
-#(''Mathematics'') That is located in the [[cardinal product]] of the [[real]] and [[imaginary]] planes.
+#(''Mathematics'') That is located in the [[cardinal product]] of the [[real]] and [[imaginary]] [[rect|rects]].
 #:'''Complex''' Function.
 #:'' ( 1 ; -i ) * ( 1 ; i ) = 2 ''
 
