--- a/wiki/%E6%8E%A5.wikitext
+++ b/wiki/%E6%8E%A5.wikitext
@@ -11,15 +11,15 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#receive
-*# continue
-*# catch
-*# connect
+*# [[receive]]
+*# [[continue]]
+*# [[catch]]
+*# [[connect]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,85 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jip3
 
+===Compounds===
+*[[接班]], [[接班儿]]
+*[[接班人]]
+*[[接茬儿]]
+*[[接产]]
+*[[接触]]
+*[[接触眼镜]]
+*[[接待]]
+*[[接到]]
+*[[接敌]]
+*[[接地]]
+*[[接点]]
+*[[接二连三]]
+*[[接防]]
+*[[接风]]
+*[[接羔]]
+*[[接骨]]
+*[[接骨木]]
+*[[接管]]
+*[[接轨]]
+*[[接合]]
+*[[接活]]
+*[[接火]], [[接火儿]]
+*[[接济]]
+*[[接驾]]
+*[[接见]]
+*[[接界]]
+*[[接近]]
+*[[接境]]
+*[[接客]]
+*[[接口]]
+*[[接力]]
+*[[接力棒]]
+*[[接力赛跑]]
+*[[接连]]
+*[[接邻]]
+*[[接龙]]
+*[[接纳]]
+*[[接盘]]
+*[[接气]]
+*[[接洽]]
+*[[接腔]]
+*[[接亲]]
+*[[接球]]
+*[[接任]]
+*[[接衫]]
+*[[接墒]]
+*[[接生]]
+*[[接事]]
+*[[接收]]
+*[[接手]]
+*[[接受]]
+*[[接穗]]
+*[[接榫]]
+*[[接谈]]
+*[[接替]]
+*[[接通]]
+*[[接头]]
+*[[接头儿]]
+*[[接吻]]
+*[[接物]]
+*[[接线]]
+*[[接线员]]
+*[[接续]]
+*[[接引]]
+*[[接应]]
+*[[接遇]]
+*[[接援]]
+*[[接站]]
+*[[接着]]
+*[[接枝]]
+*[[接踵]]
+*[[接种]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せつ]] (setsu)
