--- a/wiki/raccoon.wikitext
+++ b/wiki/raccoon.wikitext
@@ -22,7 +22,7 @@
 *Spanish: [[mapache]] ''m''
 *Swedish: [[tvättbjörn]]
 *Turkish: [[rakun]]
-
+*Japanese: [[狸]]
 [[image:raccoon.jpg]]
 
 ====See also====
