--- a/wiki/basionym.wikitext
+++ b/wiki/basionym.wikitext
@@ -1,6 +1,6 @@
 '''basionym''' 
 
-#On [[taxonomy]], the first scientific name applied to a species and on which subsequent names are based.  
+#On [[taxonomy]], a scientific name of a species and on which subsequent nomenclature changes are based.  
 
 For example,
 
