--- a/wiki/%E7%B3%BB.wikitext
+++ b/wiki/%E7%B3%BB.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#system
-*# line, link, connection
+*# [[system]]
+*# [[line]], [[link]], [[connection]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,11 +34,29 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[係]], [[繫]]
 
+===Compounds===
+*[[系绊]]
+*[[系词]]
+*[[系缚]]
+*[[系怀]]
+*[[系累]]
+*[[系列]]
+*[[系列化]]
+*[[系列剧]]
+*[[系列片]]
+*[[系念]]
+*[[系谱]]
+*[[系谱树]]
+*[[系数]]
+*[[系统]]
+*[[系统工程]]
+*[[系于]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けい]] (kei)
