--- a/wiki/%E6%AC%A0.wikitext
+++ b/wiki/%E6%AC%A0.wikitext
@@ -13,13 +13,15 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#[[owe]], [[lack]], be deficient, [[yawn]]
+*# [[yawn]]
+*# [[lack]], be [[deficient]]
+*# [[owe]]
 *# KangXi radical number 76
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,15 +33,40 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': him3
 
+===Compounds===
+*[[欠安]]
+*[[欠火]]
+*[[欠佳]]
+*[[欠据]]
+*[[欠款]]
+*[[欠情]], [[欠情儿]]
+*[[欠少]]
+*[[欠伸]]
+*[[欠身]]
+*[[欠条]], [[欠条儿]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けつ]] (ketsu) [[けん]] (ken)
 ** '''[[Kun]]''': [[かける]] (kakeru), [[あくび]] (akubi)
+
+===Compounds===
+*[[欠員]]
+*[[欠格]]
+*[[欠陥]]
+*[[欠勤]]
+*[[欠如]]
+*[[欠席]]
+*[[欠席裁判]]
+*[[欠損]]
+*[[欠番]]
+*[[欠乏]]
+*[[欠伸]]
 
 * '''Other info''':  
 
