--- a/wiki/Belarusian.wikitext
+++ b/wiki/Belarusian.wikitext
@@ -5,21 +5,23 @@
 ===Noun===
 #A person from [[Belarus]] or of Belarusian descent.
 #:'''Translations'''
-#:*[[Belarusian]]: [[ᥫళ흠''m'', [[ᥫళꠝ] ''f'', [[ᥫళ띝 ''pl''
+#:*[[Belarusian]]: беларус ''m'', беларуска ''f'', беларусы ''pl''
 #:*[[Chinese]]: [[白俄罗斯人]]
-#:*[[English]]: [[Belarusian]] ''sg'', [[Belarusians]] ''pl''
+#:*[[English]]: [[Belarusian]] ''sg'', [[Belarusians]] ''pl'' (also Belarusan, Belarusans)
 #:*[[German]]: [[Belarusse]] ''m'', [[Belarussin]] ''f''
 #:*[[Japanese]]: [[ベラルーシ人]]
 #:*[[Latvian]]: [[baltkrievs]] ''m''
-#:*[[Lithuanian]]: [[baltar&ugrave;sis]] ''m''
+#:*[[Lithuanian]]: [[baltar&ugrave;sis]] ''m'' (also "gudas")
 #:*[[Polish]]: [[Bia&#322;orusin (Bia&#322;orus)]] ''m'', [[Bia&#322;orusinka (Bia&#322;oruska)]] ''f'', [[Bia&#322;orusiny (Bia&#322;orusy)]] ''pl''
-#:*[[Russian]]: [[ᥫ흠''m'', [[ᥫꠝ] ''f'', [[ᥫ띝 ''pl''
+#:*[[Russian]]: белорус ''m'', белоруска ''f'', белорусы ''pl''
 
 
 
 ===Adjective===
 #Of, from, or pertaining to Belarus, the Belarusian people or the Belarusian language.
 #:'''Translations'''
+#:*[[Belarusian]]: беларускі ''m'', беларуская ''f'', беларускія  ''pl''
 #:*[[Chinese]]: [[白俄罗斯的]]
-#:*[[German]]: [[belarussisch]]
+#:*[[English]]: [[Belarusian]] (also Belarusan)
+#:*[[German]]: [[belarussisch]] (auch wei&slig;ruthenisch)
 #:*[[Japanese]]: [[ベラルーシ語]]
