--- a/wiki/October.wikitext
+++ b/wiki/October.wikitext
@@ -26,7 +26,8 @@
 *Finnish: [[lokakuu]]
 *[[French]]: [[octobre]] ''m''
 *[[Frisian]]: [[oktober]], [[wynmoanne]]
-*German: [[Oktober]]''m'', [[Gilbhart]] ''m''
+*German: [[Oktober]]''m''
+*{{goh}}: [[Gilbhart]] ''m''
 *Greek: [[Οκτώβριος]] ''m''; (''colloquial'') [[Οκτώβρης]] ''m'', [[Οχτώβρης]] ''m''
 *Hebrew: [[אוקטובר]]
 *[[Hungarian]] [[október]]
